--- a/project.ipynb
+++ b/project.ipynb
@@ -66,17 +66,53 @@
     "# Part 1 - Descriptive Statistics\n",
     "- Calculate mean, median, and mode of transaction amounts.\n",
     "- Integrate Probability Density Function (PDF) to model the probability distribution.\n",
-    "- Compute the expected value of transaction amounts.\n"
+    "- Compute the expected value of transaction amounts.\n",
+    "\n",
+    "For transaction amounts, we have two parameters: \n",
+    "- Standard Cost (SC) and\n",
+    "- List Price (LP).\n",
+    "\n",
+    "List Price is the price at which a product or service is advertised or listed for sale. It's also sometimes referred to as the \"sticker price\" or the \"retail price.\" The list price may not always reflect the actual price paid by customers, as discounts or promotions may apply.\n",
+    "\n",
+    "Standard cost is the predetermined cost of manufacturing a product or providing a service, based on factors such as materials, labor, and overhead. It represents the expected cost under normal conditions and is used for planning, budgeting, and evaluating performance. Standard cost can serve as a benchmark against which actual costs are compared to assess efficiency and variance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 1107.8294489999998, Median: 1163.89, Mode: 0    2091.47\n",
+      "Name: list_price, dtype: float64\n",
+      "Mean: 556.0469512209312, Median: 507.58, Mode: 0    388.92\n",
+      "Name: standard_cost, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate mean, median, and mode of transaction amounts.\n",
-    "mean = df['amount'].mean()"
+    "\n",
+    "# list_price\n",
+    "mean = df['list_price'].mean()\n",
+    "median = df['list_price'].median()\n",
+    "mode = df['list_price'].mode()\n",
+    "\n",
+    "print(f\"Mean: {mean}, Median: {median}, Mode: {mode}\")\n",
+    "\n",
+    "# standard_cost\n",
+    "\n",
+    "# remove $ sign and convert to float\n",
+    "df['standard_cost'] = df['standard_cost'].replace('[\\$,]', '', regex=True).astype(float) \n",
+    "\n",
+    "mean_std_cost = df['standard_cost'].mean()\n",
+    "median_std_cost = df['standard_cost'].median()\n",
+    "mode_std_cost = df['standard_cost'].mode()\n",
+    "\n",
+    "print(f\"Mean: {mean_std_cost}, Median: {median_std_cost}, Mode: {mode_std_cost}\")"
    ]
   }
  ],
