--- a/project.ipynb
+++ b/project.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-21T18:47:37.280588374Z",
+     "start_time": "2024-02-21T18:47:37.279941707Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# import the necessary packages\n",
@@ -18,8 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-21T18:47:37.581294120Z",
+     "start_time": "2024-02-21T18:47:37.536270939Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -79,15 +89,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-21T18:47:38.788489765Z",
+     "start_time": "2024-02-21T18:47:38.723145215Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 1107.8294489999998, Median: 1163.89, Mode: 0    2091.47\n",
-      "Name: list_price, dtype: float64\n",
+      "Mean: 1107.8294489999998, Median: 1163.89, Mode: 0        2091.47\n",
+      "1            NaN\n",
+      "2            NaN\n",
+      "3            NaN\n",
+      "4            NaN\n",
+      "          ...   \n",
+      "19995        NaN\n",
+      "19996        NaN\n",
+      "19997        NaN\n",
+      "19998        NaN\n",
+      "19999        NaN\n",
+      "Name: list_price, Length: 20000, dtype: float64\n",
       "Mean: 556.0469512209312, Median: 507.58, Mode: 0    388.92\n",
       "Name: standard_cost, dtype: float64\n"
      ]
@@ -99,7 +124,7 @@
     "# list_price\n",
     "mean = df['list_price'].mean()\n",
     "median = df['list_price'].median()\n",
-    "mode = df['list_price'].mode()\n",
+    "mode = df.mode()['list_price']\n",
     "\n",
     "print(f\"Mean: {mean}, Median: {median}, Mode: {mode}\")\n",
     "\n",
@@ -114,6 +139,40 @@
     "\n",
     "print(f\"Mean: {mean_std_cost}, Median: {median_std_cost}, Mode: {mode_std_cost}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   transaction_id  product_id  customer_id transaction_date online_order  \\\n0               1         0.0       1068.0       14/02/2017         True   \n1               2         NaN       2183.0       18/08/2017          NaN   \n2               3         NaN       2476.0              NaN          NaN   \n3               4         NaN          NaN              NaN          NaN   \n4               5         NaN          NaN              NaN          NaN   \n\n  order_status  brand product_line product_class product_size  list_price  \\\n0     Approved  Solex     Standard        medium       medium     2091.47   \n1          NaN    NaN          NaN           NaN          NaN         NaN   \n2          NaN    NaN          NaN           NaN          NaN         NaN   \n3          NaN    NaN          NaN           NaN          NaN         NaN   \n4          NaN    NaN          NaN           NaN          NaN         NaN   \n\n   standard_cost  product_first_sold_date  \n0         388.92                  33879.0  \n1            NaN                      NaN  \n2            NaN                      NaN  \n3            NaN                      NaN  \n4            NaN                      NaN  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>transaction_id</th>\n      <th>product_id</th>\n      <th>customer_id</th>\n      <th>transaction_date</th>\n      <th>online_order</th>\n      <th>order_status</th>\n      <th>brand</th>\n      <th>product_line</th>\n      <th>product_class</th>\n      <th>product_size</th>\n      <th>list_price</th>\n      <th>standard_cost</th>\n      <th>product_first_sold_date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1068.0</td>\n      <td>14/02/2017</td>\n      <td>True</td>\n      <td>Approved</td>\n      <td>Solex</td>\n      <td>Standard</td>\n      <td>medium</td>\n      <td>medium</td>\n      <td>2091.47</td>\n      <td>388.92</td>\n      <td>33879.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>NaN</td>\n      <td>2183.0</td>\n      <td>18/08/2017</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>NaN</td>\n      <td>2476.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mode = df.mode(axis=0)\n",
+    "mode.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-21T18:48:43.373401136Z",
+     "start_time": "2024-02-21T18:48:43.327859839Z"
+    }
+   },
+   "execution_count": 12
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
